Changed bg, added linkedin

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">About Me</a></li>
+								<li><a href="#about">About Me</a></li>
 								<li><a href="#work">Experience</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -46,10 +46,10 @@
 						<!-- About -->
 						<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>I'm originally from Western Massachussetts where I grew to love music, sports, and technology. After being forced to trade band class for programming my senior year - I fell in love with computer science. Fast forward 4 years, and I received my B.S. in CS
-								with a focus in Information Security, and Minor in Mathematics. Unsure of whether programming was right for me, I chose to enter GE's <a href="https://www.ge.com/careers/working-at-ge/digital-technology-leadership-program">DTLP</a> program over the opportunity to become
-								a unix administrator, and the rest was history. GE allowed me the opportunity to find my passion in education technology, build an amazing network, and receive my MBA from UNC, Chapel Hill.</p>
+								<span class="image main"><img src="images/Mount_Greylock_Scaled.jpg" alt="" /></span>
+								<p>I'm originally from Western Massachussetts where I grew to love music, sports, and technology. After being forced to trade band class for programming in high school - I fell in love with computer science. Fast forward 4 years, and I received my B.S. in CS
+								with a focus in Information Security, and Minor in Mathematics. Drawn by the opportunity to blend technical, and business acumen, I chose to enter GE's <a href="https://www.ge.com/careers/working-at-ge/digital-technology-leadership-program">DTLP</a> program, and the rest was history.</p>
+								<p>GE has provided me the opportunity to find my passion in education technology, build an amazing network, meet my best friends (and wife), and receive my MBA from UNC, Chapel Hill.</p>
 							</article>
 
 						<!-- Work -->
@@ -83,8 +83,7 @@
 								</form>
 								<ul class="icons">
 									<li><a href="https://twitter.com/clark03" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-linkedein"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.linkedin.com/in/jesseclark2/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/thedoorman" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
