Added email onclick
Email's me with the submitted parameters.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Untitled</title>
+		<title>Jesse Clark</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,7 +27,7 @@
 							<div class="inner">
 								<h1>Hey, I'm Jesse</h1>
 								<p>I'm a passionate, ambitious, marketer, and software leader at GE Digital. My personal mission is to democratize access<br />
-								to technology resources, and education through immersive, hands-on events and experiences. </p>
+								to technology resources, and education through immersive, hands-on events, and experiences. </p>
 							</div>
 						</div>
 						<nav>
@@ -47,11 +47,11 @@
 						<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/Mount_Greylock_Scaled.jpg" alt="" /></span>
-								<p>I'm originally from Western Massachussetts where I grew up playing alto, and baritone saxophone, high school sports, and my fair share of video games. My senior year brought with it an opportunity to take my first programming class; however, forced me to put my saxophone aside, and drop band. Although this decision led to
-									 a CS degree 4 years later, and the beginning of an amazing career at GE; it also was a decision I never should have needed to make.</p>
-								<p>Far too often are students forced to make tradeoffs, or given little or no opportunity to pursue their passions. It was this lack of resources, and investment in computer science
-									at my High School that represents my inspiration for starting <a href="https://www.ghostred.com">GhostRed</a> - a program designed to connect passionate, ambitious individuals with access to the 
-									network, resources, and no-how to have successful careers in technology.
+								<p>I'm originally from Western Massachussetts where I grew up playing alto, and baritone saxophone, high school sports, and my fair share of video games.
+									My senior year of high school brought with it an opportunity to take my first programming class; however, forced me to put my saxophone aside, and drop band.
+									Although this decision led to a CS degree 4 years later, and the beginning of an amazing career at GE; it also was a decision I never should have needed to make.</p>
+								<p>Far too often are students must make tradeoffs, or receive little to no opportunity to pursue their passions. It was this lack of resources, and investment in
+									Computer Science at my High School that acted as my inspiration for starting <a href="https://www.ghostred.com">GhostRed</a> - a program designed to connect passionate,
 								</p>
 							</article>
 
@@ -59,8 +59,9 @@
 							<article id="resume">
 								<h2 class="major">Resume</h2>
 								<span class="image main"><img src="images/Clark_Resume_Github.pdf" alt="" /></span>
-								<p>Upon joining GE, I was overwhelmed by the level of opportunity, and investment they create for, and make in their people. Moving around the country, receiving industry leading trainings, and building a network across all business units; DTLP layed an amazing foundation
-										for my career, and created the opportunity for me to enter the information security realm. Additionally, this program provided my first exposure to volunteering at, and running technology competitions for high school students; little did I know this would become my passion, and later full-time job!				</p>
+								<p>Upon joining GE, I was overwhelmed by the level of opportunity, and investment they create for, and made in their people. Moving around the country, receiving industry
+									leading trainings, and building a global network; DTLP layed an amazing foundation for my career, and allowed me to enter the information security realm. Additionally, this
+									 program provided my first exposure to volunteering at, and running technology competitions for high school students; little did I know this would become my passion, and later - full-time job!				</p>
 							</article>
 
 						<!-- Contact -->
@@ -80,7 +81,7 @@
 										<textarea name="message" id="message" rows="4"></textarea>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" action="mailto:jesse.clarkd@gmail.com" class="special" /></li>
+										<li><input type="submit" value="Send Message" onclick="post();" class="special" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
@@ -106,6 +107,7 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/contactMe.js"></script>
 
 	</body>
 </html>
