--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
 			<div id="bg"></div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/contactMe.js"></script>
+			<script src="assets/js/jquery.min.js" type="text/javascript"></script>
+			<script src="assets/js/skel.min.js" type="text/javascript"></script>
+			<script src="assets/js/util.js" type="text/javascript"></script>
+			<script src="assets/js/main.js" type="text/javascript"></script>
+			<script src="assets/js/contactMe.js" type="text/javascript"></script>
 
 	</body>
 </html>
