--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 										<textarea name="message" id="message" rows="4"></textarea>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" onclick="post();" class="special" /></li>
+										<li><input type="submit" value="Send Message" onclick="corsPost();" class="special" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
