--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<script src="assets/js/skel.min.js" type="text/javascript"></script>
 			<script src="assets/js/util.js" type="text/javascript"></script>
 			<script src="assets/js/main.js" type="text/javascript"></script>
-			<!--<script src="assets/js/contactMe.js" type="text/javascript"></script>-->
+			<script src="assets/js/contactMe.js" type="text/javascript"></script>
 
 	</body>
 </html>
