fixed case on method

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form action="https://ttzisvgb7j.execute-api.us-east-1.amazonaws.com/prod/contactMe?" method="POST">
+								<form action="https://ttzisvgb7j.execute-api.us-east-1.amazonaws.com/prod/contactMe?" method="post">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
