--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form action="#" method="post" onsubmit="corsPost()">
+								<form>
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
@@ -82,7 +82,7 @@
 										<textarea name="message" id="message" rows="4"></textarea>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="special" /></li>
+										<li><input type="submit" value="Send Message" onclick="createCORSRequest()"" class="special" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
@@ -106,7 +106,7 @@
 			<script src="assets/js/skel.min.js" type="text/javascript"></script>
 			<script src="assets/js/util.js" type="text/javascript"></script>
 			<script src="assets/js/main.js" type="text/javascript"></script>
-			<script src="assets/js/contactMe.js" type="text/javascript"></script>
+			<script src="assets/js/contactForm.js" type="text/javascript"></script>
 
 	</body>
 </html>
