updated form item names

--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
 								<form id="contactForm">
 									<div class="field half first">
 										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
+										<input type="text" name="form_name" id="name" />
 									</div>
 									<div class="field half">
 										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
+										<input type="text" name="form_email" id="email" />
 									</div>
 									<div class="field">
 										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
+										<textarea name="message" id="form_message" rows="4"></textarea>
 									</div>
 									<ul class="actions">
 										<li><input type="submit" value="Send Message" onsubmit="createCORSRequest()" class="special" /></li>
