Added makeCall + made var a function

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form id="contactForm" onsubmit="createCORSRequest()">
+								<form id="contactForm" onsubmit="makeCall()">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
