Added text, and location.reload

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 									My senior year of high school brought with it an opportunity to take my first programming class; however, forced me to put my saxophone aside, and drop band.
 									Although this decision led to a CS degree 4 years later, and the beginning of an amazing career at GE; it also was a decision I never should have needed to make.</p>
 								<p>Far too often are students must make tradeoffs, or receive little to no opportunity to pursue their passions. It was this lack of resources, and investment in
-									Computer Science at my High School that acted as my inspiration for starting <a href="https://www.ghostred.com">GhostRed</a> - a program designed to connect passionate,
+									Computer Science at my High School that acted as my inspiration for starting <a href="https://www.ghostred.com">GhostRed</a> - a program that provides the network, and
+									know-how to position you for a successful career.
 								</p>
 							</article>
 
