--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
 						<!-- About -->
 						<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/Mount_Greylock_Scaled.jpg" alt="" /></span>
-								<p>I'm originally from Western Massachussetts where I grew up playing alto, and baritone saxophone, high school sports, and my fair share of video games.
-									My senior year of high school brought with it an opportunity to take my first programming class; however, forced me to put my saxophone aside, and drop band.
-									Although this decision led to a CS degree 4 years later, and the beginning of an amazing career at GE; it also was a decision I never should have needed to make.</p>
-								<p>Far too often are students must make tradeoffs, or receive little to no opportunity to pursue their passions. It was this lack of resources, and investment in
-									Computer Science at my High School that acted as my inspiration for starting <a href="https://www.ghostred.com">GhostRed</a> - a program that provides the network, and
-									know-how to position you for a successful career.
+								<p>Originally from Western Massachussetts, I grew up surrounded by music, sports, and my fair share of videogames. Afternoons were spent at soccer practice, on 
+									the tennis courts, practicing saxophone, or having a LAN party with friends; an upbringing that laid foundations in leadership, the arts, and technology.
+								<p>In the fall of 2006 I began my senior year of high school, and was given the opportunity to take my first programming class. Little did I realize that to seize this opportunity
+									I would drop band, and trade my saxophone for QBasic. Although this decision would lead to a CS degree, and an amazing career at GE Digital; it was a decision 
+									that I should not have needed to make.</p>
+								<p>Far too often students make tradeoffs, or receive little to no opportunity to pursue their passions. It was this lack of resources, and investment in
+									Computer Science at my High School that I look back on as inspiration for starting <a href="https://www.ghostred.com">GhostRed</a> - a program that provides the network, and
+									know-how to position you for a successful career in technology.
 								</p>
 							</article>
 
