--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<h2 class="major">About</h2>
 								<p>Originally from Western Massachussetts, I grew up surrounded by music, sports, and my fair share of videogames. Afternoons were spent at soccer practice, on 
 									the tennis courts, practicing saxophone, or having a LAN party with friends; an upbringing that laid foundations in leadership, the arts, and technology.
-								<p>In the fall of 2006 I began my senior year of high school, and was given the opportunity to take my first programming class. Little did I realize that to seize this opportunity
+								<p>In the fall of 2006 I began my senior year of high school, and was given the opportunity to take my first programming class. Little did I realize, that to seize this opportunity,
 									I would drop band, and trade my saxophone for QBasic. Although this decision would lead to a CS degree, and an amazing career at GE Digital; it was a decision 
 									that I should not have needed to make.</p>
 								<p>Far too often students make tradeoffs, or receive little to no opportunity to pursue their passions. It was this lack of resources, and investment in
