--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Aloha, I'm Jesse</h1>
+								<h1>Hey, I'm Jesse</h1>
 								<p>I'm a passionate, ambitious, marketer, and software leader at GE Digital. My personal mission is to democratize access<br />
 								to technology resources, and education through immersive, hands-on events, and experiences. </p>
 							</div>
