--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<p class="copyright">&copy; Jesse Clark 2017.</p>
+						<ul class="icons">
+							<li><a href="https://www.linkedin.com/in/jesseclark2/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://github.com/thedoorman" class="icon fa-github"><span class="label">GitHub</span></a></li>
+						</ul>
 					</footer>
 
 			</div>
