--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 										<textarea name="message" id="message" rows="4"></textarea>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" onclick="makeCall()" class="special" /></li>
+										<li><input type="submit" value="Send Message" onclick="contactMe()" class="special" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
@@ -98,6 +98,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<p class="copyright">&copy; Jesse Clark 2017.</p>
+						<br>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/jesseclark2/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/thedoorman" class="icon fa-github"><span class="label">GitHub</span></a></li>
@@ -112,7 +113,7 @@
 			<script src="assets/js/skel.min.js" type="text/javascript"></script>
 			<script src="assets/js/util.js" type="text/javascript"></script>
 			<script src="assets/js/main.js" type="text/javascript"></script>
-			<script src="assets/js/contactForm.js" type="text/javascript"></script>
+			<script src="assets/js/contactMe.js" type="text/javascript"></script>
 
 	</body>
 </html>
