--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 										<textarea name="message" id="message" rows="4"></textarea>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" onclick="contactMe()" class="special" /></li>
+										<li><input type="submit" value="Send Message" onclick="postReq()" class="special" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
@@ -113,7 +113,7 @@
 			<script src="assets/js/skel.min.js" type="text/javascript"></script>
 			<script src="assets/js/util.js" type="text/javascript"></script>
 			<script src="assets/js/main.js" type="text/javascript"></script>
-			<script src="assets/js/contactMe.js" type="text/javascript"></script>
+			<script src="assets/js/contact.js" type="text/javascript"></script>
 
 	</body>
 </html>
