--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<!-- Work -->
 							<article id="resume">
 								<h2 class="major">Resume</h2>
-								<span class="image main"><img src="images/Clark_Resume.pdf" alt="" /></span>
+								<span class="image main"><img src="Clark_Resume.pdf" alt="" /></span>
 								<p>Upon joining GE, I was overwhelmed by the level of opportunity, and investment they create for, and made in their people. Moving around the country, receiving industry
 									leading trainings, and building a global network; DTLP layed an amazing foundation for my career, and allowed me to enter the information security realm. Additionally, this
 									 program provided my first exposure to volunteering at, and running technology competitions for high school students; little did I know this would become my passion, and later - full-time job!				</p>
