Fixed dead link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<nav>
 							<ul>
 								<li><a href="#about">About Me</a></li>
-								<li><a href="Clark_Resume_Github.pdf">Resume</a></li>
+								<li><a href="Clark_Resume.pdf">Resume</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -58,7 +58,7 @@
 								</p>
 							</article>
 
-						<!-- Work -->
+						<!-- Resume -->
 							<article id="resume">
 								<h2 class="major">Resume</h2>
 								<span class="image main"><img src="Clark_Resume.pdf" alt="" /></span>
