Update to use action

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form id="contactForm" onsubmit="javascript:handleClick()">
+								<form id="contactForm" action="javascript:handleClick()">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
