--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									know-how to position you for a successful career in technology.
 								</p>
 							</article>
-						<!-- Contact -->
+						<!-- Contact via lambda call-->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<form id="contactForm" action="https://ttzisvgb7j.execute-api.us-east-1.amazonaws.com/prod/contactMe" method="POST">
