--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<!-- Contact via lambda call-->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form id="contactForm" action="https://ttzisvgb7j.execute-api.us-east-1.amazonaws.com/prod/contactMe" method="POST">
+								<form id="contactForm" onsubmit="makeCall()">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
