--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<!-- Contact via lambda call -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form id="contactForm" onsubmit="makeCall()">
+								<form id="contactForm" onsubmit="javascript:makeCall()">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
