Updated form to post method and api call action

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							</article>
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form id="contactForm">
+								<form id="contactForm" action="https://api.jesseclark.com/contactMe" method="POST">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
@@ -73,7 +73,7 @@
 										<textarea name="message" id="message" rows="4"></textarea>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" onsubmit="javascript:makeCall()" class="special" /></li>
+										<li><input type="submit" value="Send Message" class="special" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
