Updated node to use promise

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							</article>
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form id="contactForm" action="https://api.jesseclark.com/contactMe" method="POST">
+								<form id="contactForm" action="javascript:postReq()">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
@@ -102,7 +102,7 @@
 			<script src="assets/js/skel.min.js" type="text/javascript"></script>
 			<script src="assets/js/util.js" type="text/javascript"></script>
 			<script src="assets/js/main.js" type="text/javascript"></script>
-			<script src="assets/js/contactForm.js" type="text/javascript"></script>
+			<script src="assets/js/contact.js" type="text/javascript"></script>
 
 	</body>
 </html>
