Updated landing format
Added soft returns to the landing page. Removed extra windo opening code.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Hey, I'm Jesse</h1>
-								<p>I'm a passionate, ambitious, marketer, and software leader at GE Digital. My personal mission is to democratize access<br />
-								to technology resources, and education through immersive, hands-on events, and experiences. </p>
+								<p>I'm a passionate, ambitious, marketer, and software leader at GE Digital. 
+									<br>My personal mission is to democratize access to technology resources, and education
+									<br> through immersive, hands-on events, and experiences. </p>
 							</div>
 						</div>
 						<nav>
@@ -59,7 +60,7 @@
 							</article>
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form id="contactForm" method="POST" action="https://api.jesseclark.io/contactMe">
+								<form id="contactForm" method="POST" action="https://api.jesseclark.io/contactMe"  target="window.location.href = 'https://jesseclark.io/'"  >
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
@@ -73,7 +74,7 @@
 										<textarea name="message" id="message" rows="4"></textarea>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="special" /></li>
+										<li><input  type="submit" value="Send Message" class="special" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
