Fixed meta tags

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
-		<meta name="description" content="A passionate, mission based leader who relies on his strong foundations in product marketing, software, security, and business administration to bring forth world-class, high-impact, software teams, and to deliver customer focused products.">
-		<meta name="keywords" content="software leader, engineering manager, software director, product marketer, product marketing product manager, edtech, hackathon, technology competition, talent acquisition, technical recruiting, event manager">
-		<meta name="robots" content="index,follow">
-		<meta name="DC.title" content="Jesse Clark: Software leader, and edtech visioneer."
+		<meta name="description" content="A passionate, mission based leader who relies on his strong foundations in product marketing, software, security, and business administration to bring forth world-class, high-impact, software teams, and to deliver customer focused products."/>
+		<meta name="keywords" content="software leader, engineering manager, software director, product marketer, product marketing product manager, edtech, hackathon, technology competition, talent acquisition, technical recruiting, event manager"/>
+		<meta name="robots" content="index,follow"/>
+		<meta name="DC.title" content="Jesse Clark: Software leader, and edtech visioneer."/>
 		
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
