Updated copy and keywords
Updated the meta data to optimize keywords
Revised mission statement to better use keywords

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
-		<meta name="description" content="A passionate, mission based leader who relies on his strong foundations in product marketing, software, security, and business administration to bring forth world-class, high-impact, software teams, and to deliver customer focused products."/>
-		<meta name="keywords" content="software leader, engineering manager, software director, product marketer, product marketing product manager, edtech, hackathon, technology competition, talent acquisition, technical recruiting, event manager"/>
+		<meta name="description" content="A passionate stem volunteer, and mission based software leader focused on the intersection of games, and education technology to revolutionize the student experience."/>
+		<meta name="keywords" content="jesse clark, richmond software companies, volunteer richmond va, codeva, mathscience innovation center, richmond startups, stem education, educational technologist, educational technology, capture the flag hacking, hackathon projects"/>
 		<meta name="robots" content="index,follow"/>
-		<meta name="DC.title" content="Jesse Clark: Software leader, and edtech visioneer."/>
+		<meta name="DC.title" content="Jesse Clark: stem volunteer, software leader, and edtech visioneer."/>
 		
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
@@ -43,9 +43,9 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Hey, I'm Jesse</h1>
-								<p>I'm a passionate, ambitious, marketer, and software leader at GE Digital. 
-									<br>My personal mission is to democratize access to technology resources, and education
-									<br> through immersive, hands-on events, and experiences. </p>
+								<p>I'm A passionate stem volunteer, and mission based software leader located in Richmond VA.<br>
+									My focus lies at the intersection of games, and education technology to revolutionize the student experience.<br>
+								</p>
 							</div>
 						</div>
 						<nav>
