Updated content and links
-Used more keywords in text
-Added closing paragraph to about
-Made links open in new window

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
-		<meta name="description" content="A passionate stem volunteer, and mission based software leader focused on the intersection of games, and education technology to revolutionize the student experience."/>
+		<meta name="description" content="A passionate stem volunteer, and software leader focused on the intersection of games, and education technology to revolutionize the student experience."/>
 		<meta name="keywords" content="jesse clark, richmond software companies, volunteer richmond va, codeva, mathscience innovation center, richmond startups, stem education, educational technologist, educational technology, capture the flag hacking, hackathon projects"/>
 		<meta name="robots" content="index,follow"/>
 		<meta name="DC.title" content="Jesse Clark: stem volunteer, software leader, and edtech visioneer."/>
@@ -43,7 +43,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Hey, I'm Jesse</h1>
-								<p>I'm A passionate stem volunteer, and mission based software leader located in Richmond VA.<br>
+								<p>I'm A passionate stem volunteer, and mission based software leader located in Richmond Virginia.<br>
 									My focus lies at the intersection of games, and education technology to revolutionize the student experience.<br>
 								</p>
 							</div>
@@ -70,13 +70,16 @@
 									I would drop band, and trade my saxophone for QBasic. Although this decision would lead to a CS degree, and an amazing career at GE Digital; it was a decision 
 									that I should not have needed to make.</p>
 								<p>Far too often students make tradeoffs, or receive little to no opportunity to pursue their passions. It was this lack of resources, and investment in
-									Computer Science at my High School that I look back on as inspiration for starting <a href="https://www.ghostred.com">GhostRed</a> - a program that provides the network, and
-									know-how to position you for a successful career in technology.
+									STEM education at my High School that I look back on as inspiration for starting <a href="https://www.ghostred.com" target="_blank">GhostRed</a> - a STEM educational technology program to provide the network, and
+									know-how to position students for successful careers in technology.
+								<p>Now based in Richmond, VA I have positioned myself as an influencer within the STEM volunteer community. More specifically, my partnership with Richmond's <a href="https://mymsic.org/" target="_blank">MathScience Innovation Center</a>
+									as a program leader, membership to Deep Run High School's CIT Advisory Board, and leadership as a part of <a href="https://rvatech.com" target="_blank">RVATech's</a> hackathon strategy continue to advance me toward my passion of bringing games into the classroom. 	
+								</p>
 								</p>
 							</article>
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form id="contactForm" method="POST" action="https://api.jesseclark.io/contactMe"  target="window.location.href = 'https://jesseclark.io/'"  >
+								<form id="contactForm" method="POST" action="https://api.jesseclark.io/contactMe""  >
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
@@ -95,8 +98,8 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/jesseclark2/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-									<li><a href="https://github.com/thedoorman" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/jesseclark2/" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://github.com/thedoorman" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 				</div>
@@ -106,8 +109,8 @@
 						<p class="copyright">&copy; Jesse Clark 2017.</p>
 						<br>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/jesseclark2/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://github.com/thedoorman" class="icon fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/jesseclark2/" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://github.com/thedoorman" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</footer>
 
