--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							</article>
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form id="contactForm" method="POST" action="https://api.jesseclark.io/contactMe""  >
+								<form id="contactForm" method="POST" action="https://api.jesseclark.io/contactMe"/>
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
