Updated resume & text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		gtag('config', 'UA-111411761-1');
 		</script>
-
+		<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 		<title>Jesse Clark</title>
 		<meta charset="utf-8" />
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
@@ -38,7 +38,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-diamond"></span>
+							<span class="icon fa-diamond"></span>	
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -66,8 +66,8 @@
 								<h2 class="major">About</h2>
 								<p>Originally from Western Massachusetts, I grew up surrounded by music, sports, and my fair share of video games. Afternoons were spent at soccer practice, on the tennis courts, 
 									practicing saxophone, or having a LAN party with friends; an upbringing that laid foundations in leadership, the arts, and technology.
-								<p>In the fall of 2006, I began my senior year of high school and was given the opportunity to take my first programming class. Little did I realize, that to seize this opportunity,
-									 I would drop band class, and trade my saxophone for QBasic. Although this decision would lead to a CS degree, and an amazing career at GE Digital; it was a decision that I 
+								<p>In the fall of 2006, I began my senior year of high school and seized the opportunity to take my first programming class. Little did I realize, that to seize this opportunity,
+									 I would drop band class, and trade my saxophone for QBasic. Although this decision would lead to a CS degree, a fantastic career at GE Digital; it was a decision that I 
 									 should not have needed to make.</p>
 								<p>Far too often students make tradeoffs or receive little to no opportunity to pursue their passions. It was this lack of resources, and investment in STEM education at my High School
 									 that I look back on as inspiration for starting <a href="https://www.ghostred.com" target="_blank">GhostRed</a> - a STEM educational technology program to provide the network, and know-how to position students for successful careers in technology.
