Updated grammar & copyright
-Ran bio through grammarly
-Updated copyright

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 						<!-- About -->
 						<article id="about">
 								<h2 class="major">About</h2>
-								<p>Originally from Western Massachusetts, I grew up surrounded by music, sports, and my fair share of video games. Afternoons were spent at soccer practice, on the tennis courts, 
+								<p>Originally from Western Massachusetts, I grew up immersed in music, sports, and my fair share of video games. Afternoons were spent at soccer practice, on the tennis courts, 
 									practicing saxophone, or having a LAN party with friends; an upbringing that laid foundations in leadership, the arts, and technology.
-								<p>In the fall of 2006, I began my senior year of high school and seized the opportunity to take my first programming class. Little did I realize, that to seize this opportunity,
+								<p>In the fall of 2006, I began my senior year of high school and seized the opportunity to take my first programming class. Sadly, to seize this opportunity,
 									 I would drop band class, and trade my saxophone for QBasic. Although this decision would lead to a CS degree, a fantastic career at GE Digital; it was a decision that I 
 									 should not have needed to make.</p>
-								<p>Far too often students make tradeoffs or receive little to no opportunity to pursue their passions. It was this lack of resources, and investment in STEM education at my High School
+								<p>Far too often students make tradeoffs or receive little to no opportunity to pursue their passions. It was this lack of resources and investment in STEM education at my High School
 									 that I look back on as inspiration for starting <a href="https://www.ghostred.com" target="_blank">GhostRed</a> - a STEM educational technology program to provide the network, and know-how to position students for successful careers in technology.
 								<p>Now based in Richmond, VA I have positioned myself as an influencer within the STEM volunteer community. More specifically, my partnership with Richmond's <a href="https://mymsic.org/" target="_blank">MathScience Innovation Center</a> as a program leader,
 									 membership to Deep Run High School's CIT Advisory Board, and leadership as a part of <a href="https://rvatech.com" target="_blank">RVATech's</a> hackathon strategy continue to advance me toward my passion of bringing games into the classroom.	
@@ -105,7 +105,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Jesse Clark 2017.</p>
+						<p class="copyright">&copy; Jesse Clark 2018.</p>
 						<br>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/jesseclark2/" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
