Updated tag line
-Match linkedin

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Hey, I'm Jesse</h1>
-								<p>I'm A passionate stem volunteer, and mission based software leader located in Richmond Virginia.<br>
-									My focus lies at the intersection of games, and education technology to revolutionize the student experience.<br>
+								<p>Founder of <a href="https://twitter.com/@GEGhostRed" target="_blank">@GEGhostred</a>, I thrive at the intersection of software, education, gaming and cyber security. I love product marketing, building & empowering software teams and volunteering to support our future STEM leaders.<br>
 								</p>
 							</div>
 						</div>
