--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 		<meta charset="utf-8" />
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-
-		<meta name="description" content="A passionate stem volunteer, and software leader focused on the intersection of games, and education technology to revolutionize the student experience."/>
-		<meta name="keywords" content="jesse clark, richmond software companies, volunteer richmond va, codeva, mathscience innovation center, richmond startups, stem education, educational technologist, educational technology, capture the flag hacking, hackathon projects"/>
+		<meta name="description" content="Founder of @GEGhostRed, I thrive at the intersection of software, education, gaming and cyber security. I love product marketing, building & empowering software teams and volunteering to support our future STEM leaders."/>
+		<meta name="keywords" content="jesse clark, software product leader, stem volunteer, richmond va, software engineering"/>
 		<meta name="robots" content="index,follow"/>
-		<meta name="DC.title" content="Jesse Clark: stem volunteer, software leader, and edtech visioneer."/>
-		
+		<meta name="DC.title" content="Jesse Clark, MBA"/>
+		<meta property="og:image" content="images/jesseclark_softwareproductleader_rva.jpg">
+		<meta name="twitter:card" content="images/tetris.jpg">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
