--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="Founder of @GEGhostRed, I thrive at the intersection of software, education, gaming and cyber security. I love product marketing, building & empowering software teams and volunteering to support our future STEM leaders."/>
-		<meta name="keywords" content="jesse clark, software product leader, stem volunteer, richmond va, software engineering"/>
+		<meta name="keywords" content="jesse clark, software product leader, stem volunteer, richmond va, RVATech, software engineering"/>
 		<meta name="robots" content="index,follow"/>
 		<meta name="DC.title" content="Jesse Clark, MBA"/>
 		<meta property="og:image" content="images/jesseclark_softwareproductleader_rva.jpg">
