Updated meta tags
Closed the tags on image metas

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		<meta name="keywords" content="jesse clark, software product leader, stem volunteer, richmond va, RVATech, software engineering"/>
 		<meta name="robots" content="index,follow"/>
 		<meta name="DC.title" content="Jesse Clark, MBA"/>
-		<meta property="og:image" content="images/jesseclark_softwareproductleader_rva.jpg">
-		<meta name="twitter:card" content="images/tetris.jpg">
+		<meta property="og:image" content="images/jesseclark_softwareproductleader_rva.jpg"/>
+		<meta name="twitter:card" content="images/tetris.jpg"/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
