--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             </div>
                             <div class="preview-content">
                                 <h3>MindLabs Collaborative Play</h3>
-                                <p>Pokemon cards meets Stem Ed in AR</p>
+                                <p>Pokemon cards meets Stem Education in AR</p>
                             </div>
                         </a>
 
