--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="carousel-track">
 
 						  <!-- Target -->
-						  <a href="https://target.com/" class="carousel-slide" target="_blank">
+						  <a href="https://www.target.com/s?searchTerm=table" class="carousel-slide" target="_blank">
                             <div class="preview-image">
                                 <img src="" alt="MindLabs" loading="lazy">
                             </div>
@@ -122,7 +122,7 @@
                         </a>
 
                         <!-- GameStop Search -->
-                        <a href="https://www.gamestop.com/search" class="carousel-slide" target="_blank">
+                        <a href="https://www.gamestop.com/search/?q=mario+kart" class="carousel-slide" target="_blank">
                             <div class="preview-image">
                                 <img src="" alt="GameStop Search Preview" loading="lazy">
                             </div>
